fix keyserver search not showing the last result

(cherry picked from commit 1ad41e005c5759bf5f636f095f549bf3a6d92d0f)

BUG:303544
FIXED-IN:4.8.5

This has been sitting on master for a while and is already part of what will
become SC 4.9. Fix it also for 4.8.5.